[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doctor-bot"
version = "0.1.0"
description = "A RAG-based clinical screening application"
authors = [{name = "Doctor Bot Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "PyPDF2>=3.0.0",
    "regex>=2023.0.0",
    "beautifulsoup4>=4.12.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "transformers>=4.35.0",
    "tokenizers>=0.14.0",
    "google-generativeai>=0.3.0",
    "httpx>=0.25.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "streamlit>=1.28.0",
    "pyyaml>=6.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rag*", "llm*", "api*", "ui*", "eval*"]
